--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/Create.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/Create.cshtml
@@ -274,9 +274,9 @@
                                             <div class="form-group">
                                                 <label for="inputFirstName" class="col-md-3 control-label">Kỹ năng cần thiết<span class="require">*</span></label>
                                                 <div class="col-md-9">
-                                                    <input id="skill"  type="text" placeholder="" class="form-control" autocomplete="on" />
-                                                    <input id="skill2" type="text" placeholder="" class="form-control" autocomplete="on" />
-                                                    <input id="skill3" type="text" placeholder="" class="form-control" autocomplete="on" />
+                                                    <input id="skill"  name="skill1" type="text" placeholder="" class="form-control" autocomplete="on" />
+                                                    <input id="skill2" name="skill2" type="text" placeholder="" class="form-control" autocomplete="on" />
+                                                    <input id="skill3" name="skill3" type="text" placeholder="" class="form-control" autocomplete="on" />
                                                     <input id="tagList" type="hidden" name="SkillSelectList">
                                                 </div>
                                             </div>
